# plexbar

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: publish.yml
src/plexbar/: __init__.py  __main__.py  app.py  models.py  playback.py  plex_client.py  settings.py
tests/: test_core.py
